fix footer on small res

--- a/DElectronic/DElectonic/src/Components/Footer/Footer.module.css
+++ b/DElectronic/DElectonic/src/Components/Footer/Footer.module.css
@@ -55,7 +55,7 @@
     }
     .footer {
         flex-direction: column; 
-        height: auto;
+        height: 130vh;
         padding: 20px 0;
         align-items: start;     
         gap: 15px;            
